# cppstrutils

./: CMakeLists.txt  README.md  cpm_dependecies.cmake  options_init.cmake  options_print.cmake  settings.cmake
cmake/: custom_targets.cmake  download_conan.cmake  download_cpm.cmake  external_project.cmake
include/: strcmp.hpp  strutils.hpp
src/: CMakeLists.txt  strutils.cpp
test/: CMakeLists.txt  strcmp_test.cpp  strutils_test.cpp
